# ai_linkedin_quiz_solver

./: Cargo.toml  LICENSE  README.md
extention/: content.js  manifest.json  popup.html  popup.js
src/: main.rs
